# kpp-calc

./: .deepsource.toml  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  AI_AGENT_CONCRETE_IMPROVEMENTS.md  AI_AGENT_IMPROVEMENT_PLAN.md  AI_DEBUGGING_IMPLEMENTATION_SUMMARY.md  AI_TOOLS_CALLBACK_ENDPOINT_SUMMARY.md  CALLBACK_INTEGRATION_COMPLETION_REPORT.md  CALLBACK_LOGIC_FIXES.md  CODE_QUALITY_IMPROVEMENT_ROADMAP.md  CODE_REVIEW_REPORT.md  COMPLETE_PHYSICS_UPGRADE_IMPLEMENTATION.md  COMPLETE_SYSTEM_TEST_REPORT.md  COMPREHENSIVE_REVIEW_SUMMARY.md  COMPREHENSIVE_VALIDATION_FINAL_REPORT.md  CONTRIBUTING.md  CORE_APPLICATION_ANALYSIS_SUMMARY.md  CRASH_ANALYSIS_FINAL_REPORT.md  CRASH_FIX_SUMMARY.md  CRITICAL_INTEGRATION_IMPLEMENTATION_PLAN.md  CURRENT_STATUS_SUMMARY.md  Closed-Loop Control Implementation for the KPP  Simulator.md  DASH_API_FIX.md  DASH_FRONTEND_CORRECTION.md  DATA_FLOW_ANALYSIS.md  DEEPSOURCE_SETUP.md  DEPLOYMENT_GUIDE.md  ELECTRICAL_ENGAGEMENT_SOLUTION.md  ENDPOINT_MAPPING_SUCCESS_REPORT.md  ENDPOINT_TEST_FIX_PLAN.md  FINAL_100_PERCENT_ENDPOINT_COVERAGE_REPORT.md  FINAL_IMPLEMENTATION_COMPLETION_REPORT.md  FINAL_PHYSICS_UPGRADE_STATUS_REPORT.md  FINAL_PROBLEMS_REVIEW_REPORT.md  FINAL_STATUS_REPORT.md  FINAL_SYSTEM_STATUS_REPORT.md  FINAL_WEBSOCKET_ARCHITECTURE.md  FLOATER_SYSTEM_INTERACTION_ANALYSIS.md  (+358 more)
.github/workflows/: ci-cd-pipeline.yml  ci.yml
.venv_new/: pyvenv.cfg
.venv_new/Scripts/: activate  activate.bat
4phases/: guide-4phses.md
ai-debugging-tools/: GUI_TOOLS_README.md  README.md  ai_debugging_guide.md  analyze_callbacks_and_endpoints.py  callback_endpoint_analysis.json  gui_callback_analyzer.py  gui_performance_monitor.py  kpp_debugging_dashboard.py  launch_gui.py
archive/: README.md  __init__.py  engine_realtime.py
archive/simulation/: __init__.py  __pycache__.txt  controller.py  floater.py
assets/: trace.js
backup/: main_old.js
backup/legacy_drivetrain_backup/: drivetrain_legacy.py
backup/phase1_backup/: requirements_old.txt
browser_logs/: kpp_browser_logs_20250704_233723.json  kpp_browser_logs_20250704_233759.json  kpp_browser_logs_20250704_233816.json  kpp_browser_logs_20250704_235814.json
config/: __init__.py  config.py  control_config.py  default_config.json  kpp_system_config.json  manager.py  parameter_schema.py
config/components/: __init__.py  chrono_config.py  control_config.py  drivetrain_config.py  electrical_config.py  floater_config.py  fluid_config.py  generator_config.py  loss_tracking_config.py  simulation_config.py  thermodynamics_config.py
config/core/: __init__.py  base_config.py  schema.py  validation.py
config/presets/: __init__.py  high_power.json  test.json
docs/: api_reference.md  coding_standards.md  debugging_guide.md  maintenance_guide.md  overall_progress_report.md  phase2_baseline.md  phase2_completion_summary.md  phase2_status_report.md  phase3_completion_summary.md  phase3_final_validation.md  phase4_completion_summary.md  phase5_completion_summary.md  phase5_final_improvements_status.md  phase5_final_status.md  phase5_implementation_plan.md  physics_documentation.md  quality_baseline.md
docs/phase1/: physics_audit.md
docs/phase4/: README.md  battery_storage.md  configuration_guide.md  demand_response.md  economic_optimization.md
done-upgrades_files/: Guidev2.md  PHASE6_COMPLETION_STATUS.md  PHASE7_COMPLETION_STATUS.md  PHASE7_TEST_SUMMARY.md  drivetrain-physics-guide.md  guide-prestage.md  guide.md  guideprestagegap.md  guidev1.1.1.md  phase3_implementation_summary.md  phase4_implementation_summary.md  phase5_completion_summary.md  phase6_completion_summary.md  phase7_completion_summary.md  phase7_implementation_plan.md  pneumatics-upgrade-stages.md  pneumatics-upgrade.md
kpp_simulator/: __init__.py
kpp_simulator/config/: __init__.py  manager.py
kpp_simulator/control_systems/: control_system.py  grid_disturbance_handler.py
kpp_simulator/core/: physics_engine.py
kpp_simulator/electrical/: electrical_system.py
kpp_simulator/grid_services/: grid_services_coordinator.py
routes/: api.py  loss_monitoring_api.py  simulation_api.py  stream.py
simulation/: __init__.py  controller.py  engine.py  engine_realtime.py  floater.py  physics.py  plotting.py  pneumatic_physics.py  pulse_physics.py  schemas.py  simulation.py
static/: kpp_dashboard.css  test.css
templates/: index.html  loss_monitoring.html  performance_monitoring.html  simulation.html
tests/: conftest.py  conftest_integration.py  requirements-test.txt  run_phase4_tests.py  run_physics_validation.py  test_control.py  test_drivetrain.py  test_dynamic_params.py  test_energy_flow.py  test_engine_integration.py  test_environment.py  test_floater.py  test_generator.py  test_phase5_enhanced_loss_model.py  test_phase6_transient_event_handling.py  test_phase7_demand_response.py  test_phase7_demand_response_basic.py  test_phase7_economic_optimization.py  test_phase7_frequency_services.py  test_pneumatics.py  test_validation.py
utils/: backend_logger.py  component_manager.py  errors.py  logger.py  logging_setup.py
validation/: __init__.py  physics_validation.py
(+286 files in other folders)
